--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 .container {
@@ -10,28 +11,55 @@ body {
     text-align: center;
 }
 
-.booster-pack {
+#top-bar {
+  position: absolute;
+  width: 100%;
+  height: 5%;
+  top: 0;
+  border-bottom: 2px solid black;
+  text-align: center;
+}
+
+#deck {
+    position: absolute;
+    width: 60%;
+    height: 95%;
+    top: 5%;
+    left: 0;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    border-right: 2px solid black;
+    text-align: center;
+}
+
+#booster-pack {
+    position: absolute;
+    width: 40%;
+    height: 95%;
+    top: 5%;
+    left: 60%;
     width: 600px;
     display: flex;
     flex-wrap: wrap;
-  }
+}
 
+.card {
+  flex: 0 0 calc(15% - 12px);
+  margin: 1px 6px 1px 6px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 600px) {
   .card {
-    flex: 0 0 calc(25% - 12px);
-    margin: 1px 6px 1px 6px;
-    box-sizing: border-box;
+    flex: 0 0 calc(50% - 12px);
   }
+}
 
-  @media screen and (max-width: 600px) {
-    .card {
-      flex: 0 0 calc(50% - 12px);
-    }
-  }
-
-  .card img {
-    width: 100%;
-    height: auto;
-  }
+.card img {
+  width: 100%;
+  height: auto;
+}
 
 .main img {
     max-width: 400px;
