--- a/src/main.css
+++ b/src/main.css
@@ -30,7 +30,8 @@ body {
     flex-wrap: wrap;
     overflow-y: auto;
     border-right: 2px solid black;
-    text-align: center;
+    justify-content: center;
+    padding-top: 30px;
 }
 
 #booster-pack {
@@ -42,6 +43,9 @@ body {
     width: 600px;
     display: flex;
     flex-wrap: wrap;
+    overflow-y: auto;
+    justify-content: center;
+    padding-top: 30px;
 }
 
 #deck-info {
@@ -52,8 +56,14 @@ body {
   display: inline-block;
 }
 
-.card {
+.deck-card {
   flex: 0 0 calc(15% - 12px);
+  margin: 1px 6px 1px 6px;
+  box-sizing: border-box;
+}
+
+.booster-card {
+  flex: 0 0 calc(30% - 12px);
   margin: 1px 6px 1px 6px;
   box-sizing: border-box;
 }
@@ -84,4 +94,9 @@ body {
 
 .ink-token {
   height: 100%;
+}
+
+.disabled-card {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
 }
