--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@ body {
 #top-bar {
   position: absolute;
   width: 100%;
-  height: 5%;
+  height: 35%;
   top: 0;
   border-bottom: 2px solid black;
   text-align: center;
@@ -24,7 +24,7 @@ body {
     position: absolute;
     width: 60%;
     height: 95%;
-    top: 5%;
+    top: 35%;
     left: 0;
     display: flex;
     flex-wrap: wrap;
@@ -38,7 +38,7 @@ body {
     position: absolute;
     width: 40%;
     height: 95%;
-    top: 5%;
+    top: 35%;
     left: 60%;
     width: 600px;
     display: flex;
@@ -90,6 +90,14 @@ body {
   margin-left: 10px;
   margin-top: 5px;
   top: 0;
+}
+
+#deck-curve {
+  position: absolute;
+  border: 1px solid black;
+  left: 0px;
+  top: 45px;
+  margin-left: 5px;
 }
 
 .ink-token {
