--- a/src/main.css
+++ b/src/main.css
@@ -14,7 +14,7 @@ body {
 #top-bar {
   position: absolute;
   width: 100%;
-  height: 35%;
+  height: 5%;
   top: 0;
   border-bottom: 2px solid black;
   text-align: center;
@@ -24,7 +24,7 @@ body {
     position: absolute;
     width: 60%;
     height: 95%;
-    top: 35%;
+    top: 5%;
     left: 0;
     display: flex;
     flex-wrap: wrap;
@@ -38,7 +38,7 @@ body {
     position: absolute;
     width: 40%;
     height: 95%;
-    top: 35%;
+    top: 5%;
     left: 60%;
     width: 600px;
     display: flex;
@@ -92,14 +92,6 @@ body {
   top: 0;
 }
 
-#deck-curve {
-  position: absolute;
-  border: 1px solid black;
-  left: 0px;
-  top: 45px;
-  margin-left: 5px;
-}
-
 .ink-token {
   height: 100%;
 }
@@ -107,4 +99,27 @@ body {
 .disabled-card {
   opacity: 0.4;
   filter: alpha(opacity=40);
+}
+
+#graph-icon {
+  height: 95%;
+  width: auto;
+  display: inline-block;
+}
+
+#deck-curve {
+  position: absolute;
+  border: 5px solid black;
+  left: 0px;
+  top: 45px;
+  margin-left: 5px;
+  z-index: 1;
+  display: none;
+  background-color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+#graph-icon:hover #deck-curve {
+  display: block;
 }
