--- a/src/main.css
+++ b/src/main.css
@@ -40,7 +40,6 @@ body {
     height: 95%;
     top: 5%;
     left: 60%;
-    width: 600px;
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
@@ -57,7 +56,7 @@ body {
 }
 
 .deck-card {
-  flex: 0 0 calc(15% - 12px);
+  flex: 0 0 calc(20% - 12px);
   margin: 1px 6px 1px 6px;
   box-sizing: border-box;
 }
@@ -77,6 +76,12 @@ body {
 .card img {
   width: 100%;
   height: auto;
+}
+
+.card img:hover {
+  transform: scale(1.5);
+  z-index: 2;
+  top: 25%;
 }
 
 .main img {
