--- a/src/main.css
+++ b/src/main.css
@@ -134,3 +134,35 @@ body {
 #graph-icon:hover #deck-curve {
   display: block;
 }
+
+#starter-deck-chooser {
+  position: fixed;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  top: 10%;
+  border: 2px solid black;
+  background-color: white;
+  padding: 20px;
+  display: none;
+  overflow-y: scroll;
+}
+
+#close-starter-deck-selector {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.starter-deck {
+  width: 80%;
+  margin-left: 10%;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.starter-deck-image {
+  max-width: 400px;
+  height: auto;
+  float: left;
+}
