--- a/src/main.css
+++ b/src/main.css
@@ -52,7 +52,8 @@ body {
   left: 0;
   top: 0;
   height: 5%;
-  display: inline-block;
+  display: flex;
+  align-items: center;
 }
 
 .deck-card {
@@ -95,12 +96,11 @@ body {
     justify-content: center;
 }
 
-#card-count {
-  position: absolute;
-  font-size: 200%;
-  margin-left: 10px;
-  margin-top: 5px;
-  top: 0;
+.card-counter {
+  font-size: 180%;
+  margin-right: 10px;
+  vertical-align: middle;
+  margin-left: 5px;
 }
 
 .ink-token {
@@ -116,6 +116,7 @@ body {
   height: 95%;
   width: auto;
   display: inline-block;
+  margin-right: 10px;
 }
 
 #deck-curve {
